# funk

./: .gitignore  LICENSE.md  README.md  meson.build
include/: Integer.hpp  UnitTest.hpp  iter.hpp  option.hpp  types.hpp
test/: Integer.cpp  main.cpp
